Fixed spacing on footer

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -3,6 +3,7 @@
 .main-content {
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 5em;
 }
 
 .link-list a {
